[gd_scene load_steps=8 format=2]

[ext_resource path="res://materials/theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/gui/KeyboardButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/SaveWizard.gd" type="Script" id=3]
[ext_resource path="res://scripts/KeyboardButton.gd" type="Script" id=4]

[sub_resource type="ButtonGroup" id=1]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.188235, 0.176471, 0.211765, 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Keyboard" type="GridContainer" parent="Panel"]
anchor_top = 0.375
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 160.0
margin_top = 60.0
margin_right = -421.0
margin_bottom = -184.0
rect_scale = Vector2( 3, 3 )
columns = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" parent="Panel/Keyboard" instance=ExtResource( 2 )]
group = SubResource( 1 )

[node name="Button2" parent="Panel/Keyboard" instance=ExtResource( 2 )]
margin_left = 13.0
margin_right = 22.0
group = SubResource( 1 )
text = "B"
script = ExtResource( 4 )

[node name="Button3" parent="Panel/Keyboard" instance=ExtResource( 2 )]
margin_left = 26.0
margin_right = 37.0
group = SubResource( 1 )
text = "C"
script = ExtResource( 4 )

[node name="Button5" parent="Panel/Keyboard" instance=ExtResource( 2 )]
margin_left = 41.0
margin_right = 49.0
group = SubResource( 1 )
text = "D"
script = ExtResource( 4 )

[node name="Button6" parent="Panel/Keyboard" instance=ExtResource( 2 )]
margin_left = 53.0
margin_right = 62.0
group = SubResource( 1 )
text = "E"
script = ExtResource( 4 )

[node name="Button7" parent="Panel/Keyboard" instance=ExtResource( 2 )]
margin_left = 66.0
margin_right = 73.0
group = SubResource( 1 )
text = "F"
script = ExtResource( 4 )

[node name="Button8" parent="Panel/Keyboard" instance=ExtResource( 2 )]
margin_left = 77.0
margin_right = 86.0
group = SubResource( 1 )
text = "G"
script = ExtResource( 4 )

[node name="Button9" parent="Panel/Keyboard" instance=ExtResource( 2 )]
margin_left = 90.0
margin_right = 98.0
group = SubResource( 1 )
text = "H"
script = ExtResource( 4 )

[node name="Button10" parent="Panel/Keyboard" instance=ExtResource( 2 )]
margin_left = 102.0
margin_right = 109.0
group = SubResource( 1 )
text = "I"
script = ExtResource( 4 )

[node name="Button11" parent="Panel/Keyboard" instance=ExtResource( 2 )]
margin_left = 113.0
margin_right = 130.0
group = SubResource( 1 )
text = "J"
align = 0
script = ExtResource( 4 )

[node name="Button12" parent="Panel/Keyboard" instance=ExtResource( 2 )]
margin_top = 20.0
margin_bottom = 36.0
group = SubResource( 1 )
text = "K"
script = ExtResource( 4 )

[node name="Button13" parent="Panel/Keyboard" instance=ExtResource( 2 )]
margin_left = 13.0
margin_top = 20.0
margin_right = 22.0
margin_bottom = 36.0
group = SubResource( 1 )
text = "L"
script = ExtResource( 4 )

[node name="Button14" parent="Panel/Keyboard" instance=ExtResource( 2 )]
margin_left = 26.0
margin_top = 20.0
margin_right = 37.0
margin_bottom = 36.0
group = SubResource( 1 )
text = "M"
script = ExtResource( 4 )

[node name="Button15" parent="Panel/Keyboard" instance=ExtResource( 2 )]
margin_left = 41.0
margin_top = 20.0
margin_right = 49.0
margin_bottom = 36.0
group = SubResource( 1 )
text = "N"
script = ExtResource( 4 )

[node name="Button16" parent="Panel/Keyboard" instance=ExtResource( 2 )]
margin_left = 53.0
margin_top = 20.0
margin_right = 62.0
margin_bottom = 36.0
group = SubResource( 1 )
text = "O"
script = ExtResource( 4 )

[node name="Button17" parent="Panel/Keyboard" instance=ExtResource( 2 )]
margin_left = 66.0
margin_top = 20.0
margin_right = 73.0
margin_bottom = 36.0
group = SubResource( 1 )
text = "P"
script = ExtResource( 4 )

[node name="Button18" parent="Panel/Keyboard" instance=ExtResource( 2 )]
margin_left = 77.0
margin_top = 20.0
margin_right = 86.0
margin_bottom = 36.0
group = SubResource( 1 )
text = "Q"
script = ExtResource( 4 )

[node name="Button19" parent="Panel/Keyboard" instance=ExtResource( 2 )]
margin_left = 90.0
margin_top = 20.0
margin_right = 98.0
margin_bottom = 36.0
group = SubResource( 1 )
text = "R"
script = ExtResource( 4 )

[node name="Button20" parent="Panel/Keyboard" instance=ExtResource( 2 )]
margin_left = 102.0
margin_top = 20.0
margin_right = 109.0
margin_bottom = 36.0
group = SubResource( 1 )
text = "S"
script = ExtResource( 4 )

[node name="Button21" parent="Panel/Keyboard" instance=ExtResource( 2 )]
margin_left = 113.0
margin_top = 20.0
margin_right = 130.0
margin_bottom = 36.0
group = SubResource( 1 )
text = "T"
align = 0
script = ExtResource( 4 )

[node name="Button22" parent="Panel/Keyboard" instance=ExtResource( 2 )]
margin_top = 40.0
margin_bottom = 56.0
group = SubResource( 1 )
text = "U"
script = ExtResource( 4 )

[node name="Button23" parent="Panel/Keyboard" instance=ExtResource( 2 )]
margin_left = 13.0
margin_top = 40.0
margin_right = 22.0
margin_bottom = 56.0
group = SubResource( 1 )
text = "V"
script = ExtResource( 4 )

[node name="Button24" parent="Panel/Keyboard" instance=ExtResource( 2 )]
margin_left = 26.0
margin_top = 40.0
margin_right = 37.0
margin_bottom = 56.0
group = SubResource( 1 )
text = "W"
script = ExtResource( 4 )

[node name="Button25" parent="Panel/Keyboard" instance=ExtResource( 2 )]
margin_left = 41.0
margin_top = 40.0
margin_right = 49.0
margin_bottom = 56.0
group = SubResource( 1 )
text = "X"
script = ExtResource( 4 )

[node name="Button26" parent="Panel/Keyboard" instance=ExtResource( 2 )]
margin_left = 53.0
margin_top = 40.0
margin_right = 62.0
margin_bottom = 56.0
group = SubResource( 1 )
text = "Y"
script = ExtResource( 4 )

[node name="Button4" parent="Panel/Keyboard" instance=ExtResource( 2 )]
margin_left = 66.0
margin_top = 40.0
margin_right = 73.0
margin_bottom = 56.0
group = SubResource( 1 )
text = "Z"
script = ExtResource( 4 )

[node name="Button30" parent="Panel/Keyboard" instance=ExtResource( 2 )]
margin_left = 77.0
margin_top = 40.0
margin_right = 86.0
margin_bottom = 56.0
custom_styles/disabled = SubResource( 3 )
disabled = true
group = SubResource( 1 )
text = ""
script = ExtResource( 4 )

[node name="Button29" parent="Panel/Keyboard" instance=ExtResource( 2 )]
margin_left = 90.0
margin_top = 40.0
margin_right = 98.0
margin_bottom = 56.0
group = SubResource( 1 )
text = "Â·"
script = ExtResource( 4 )

[node name="Button27" parent="Panel/Keyboard" instance=ExtResource( 2 )]
margin_left = 102.0
margin_top = 40.0
margin_right = 109.0
margin_bottom = 56.0
group = SubResource( 1 )
text = "<"
script = ExtResource( 4 )

[node name="Button28" parent="Panel/Keyboard" instance=ExtResource( 2 )]
margin_left = 113.0
margin_top = 40.0
margin_right = 130.0
margin_bottom = 56.0
group = SubResource( 1 )
text = "OK"
align = 0
script = ExtResource( 4 )

[node name="Name" type="Label" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = 88.0
margin_right = -480.0
margin_bottom = -366.0
rect_scale = Vector2( 3, 3 )
custom_styles/normal = SubResource( 2 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -429.0
margin_bottom = -424.0
rect_scale = Vector2( 2, 2 )
text = "menuYourNamePlease"
__meta__ = {
"_edit_use_anchors_": false
}
